Git Tests/force-app/main/default/default/objects/GeneralParameters__c/GeneralParameters__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Parâmetros gerais.</description>
    <label>Parâmetros gerais</label>
</CustomObject>