Git Tests/force-app/main/default/default/objects/GeneralParameters__c/fields/CentroCusto__c.field-meta.xml
<CustomField>
    <fullName>CentroCusto__c</fullName>
    <label>Centro de custo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>