Git Tests/force-app/main/default/default/objects/GeneralParameters__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <defaultValue>&apos;tatiana.santos@grupoelfa.com.br&apos;</defaultValue>
    <description>Email de compras</description>
    <inlineHelpText>Email de compras</inlineHelpText>
    <label>Email de compras</label>
    <length>255</length>
    <type>Text</type>
</CustomField>