Git Tests/force-app/main/default/default/objects/GeneralParameters__c/fields/QuantidadeProdutosRecomendados__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeProdutosRecomendados__c</fullName>
    <label>Quantidade de produtos recomendados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>