Git Tests/force-app/main/default/default/objects/GeneralParameters__c/fields/StockNotification__c.field-meta.xml
<CustomField>
    <fullName>StockNotification__c</fullName>
    <defaultValue>4</defaultValue>
    <label>Notificação entrada de estoque</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>